@@ -1,6 +1,7 @@
 New in SVN
 ----------
 
+* Fix Issue 225 (bad spacing in lineblocks)
 * Fix Issue 223 (non-monospaced styles used in code)
 
 New in 0.12.2
